# neon-api-python

./: .env.example  .gitignore  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  TODO.md  client.py  pyproject.toml  requirements.txt  setup.py  v2.json
.github/workflows/: pytest.yml
__first_attempt/: __init__.py  client.py  exceptions.py  http_client.py  resources.py  simple.py
docs/: conf.py  index.rst
neon_api/: client.py  schema.py
neon_client/: __init__.py  client.py  exceptions.py  http_client.py  jsonschema.py  models.py  openapi_models.py  resources.py  schema.py  utils.py  v2_client.py
neon_client2/: resources.py  utils.py
source/: conf.py  index.rst
tests/: conftest.py  test_integration.py
tests/cassettes/test_integration/: test_api_keys.yaml  test_api_keys_crud.yaml  test_branches.yaml  test_create_project.yaml  test_database.yaml  test_endpoints.yaml  test_get_project.yaml  test_get_projects.yaml  test_me.yaml  test_operations.yaml  test_project.yaml  test_project_delete.yaml  test_roles.yaml  test_update_project.yaml
