[tool.poetry]
name = "neon-api"
version = "0.1.4"
description = "An API Client for the Neon API."
authors = ["Kenneth Reitz <me@kennethreitz.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/neondatabase/neon-api-python"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
pydantic = ">=2.0.0"

[tool.poetry.group.test.dependencies]
datamodel-code-generator = "*"
pytest = "*"
pytest-cov = "*"
pytest-ordering = "*"
pytest-recording = "*"
ruff = "*"
sphinx = "*"
renku-sphinx-theme = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
